--- a/thesis/theory/html.tex
+++ b/thesis/theory/html.tex
@@ -1,16 +1,16 @@
-HTML5 (ang. HyperText Markup Language) jest najnowszą wersją popularnego języka znaczników HTML. Pojęcie to nie jest do końca jasne i oczywiste, ponieważ ta edycja języka niesie ze sobą nie tylko zmiany w znacznikach, ale bardzo mocno rozszerza możliwości stron WWW. Co więcej łączy się bezpośrednio z innymi technologiami takimi jak Javscript oraz CSS3 i nie jest w stanie bez nich istnieć. W związku z tym sama definicja HTML jako jedynie język znaczników jest niepełna. We wcześniejszych etapach samo konsorcjum W3 miało problemy z jasną definicją HTML5 i na krótki czas składowymi tej technologii był język CSS3 oraz SVG. \cite{html5games}
+\emph{HTML5} (ang. HyperText Markup Language) jest najnowszą wersją popularnego języka znaczników \emph{HTML}. Pojęcie to nie jest do końca jasne i oczywiste, ponieważ ta edycja języka niesie ze sobą nie tylko zmiany w znacznikach, ale bardzo mocno rozszerza możliwości stron WWW. Co więcej łączy się bezpośrednio z innymi technologiami takimi jak \emph{JavaScript} oraz \emph{CSS3} i nie jest w stanie bez nich istnieć. W związku z tym sama definicja \emph{HTML5} jako jedynie język znaczników jest niepełna. We wcześniejszych etapach samo konsorcjum W3 miało problemy z jasną definicją \emph{HTML5} i na krótki czas składowymi tej technologii był język \emph{CSS3} oraz \emph{SVG}. \cite{html5games}
 
-Grupa \emph{W3} opublikowała 17 grudnia pierwszą oficjalną specyfikację HTML5 \cite{html5w3}. Od tej pory do standardu nie będą dodawane nowe funkcjonalności, a jedynie poprawiane aktualnie istniejące. Wydanie rekomendacji przez instytucję jest planowane na rok 2014 \cite{plan2014}.
+Grupa \emph{W3} opublikowała 17 grudnia pierwszą oficjalną specyfikację \emph{HTML5} \cite{html5w3}. Od tej pory do standardu nie będą dodawane nowe funkcjonalności, a jedynie poprawiane aktualnie istniejące. Wydanie rekomendacji przez instytucję jest planowane na rok 2014 \cite{plan2014}.
 
-HTML5 jest rozwijany w ścisłej współpracy z twórcami najpopularniejszych przeglądarek. Została powołana specjalna grupa WHATWG (Web Hypertext Application Technology Working Group), która skupia producentów takich jak Mozilla Foundation, Google, Opera Software oraz Apple Inc. Przeglądarki internetowe takie jak Mozilla Firefox, Google Chrome oraz Opera już teraz implementują większość z planowanych nowości przedstawionych w aktualnym szkicu w wersjach produkcyjnych. Z powodu dojrzałości obecnej formy standard oraz wielkiej popularności już na obecną chwilę można założyć, że jego podstawowe założenia oraz komponenty pozostaną w obecnej formie bez rewolucyjnych zmian.
+\emph{HTML5} jest rozwijany w ścisłej współpracy z twórcami najpopularniejszych przeglądarek. Została powołana specjalna grupa \emph{WHATWG} (Web Hypertext Application Technology Working Group), która skupia producentów takich jak Mozilla Foundation, Google, Opera Software oraz Apple Inc. Przeglądarki internetowe takie jak Mozilla Firefox, Google Chrome oraz Opera już teraz implementują w wersjach produkcyjnych większość z planowanych nowości przedstawionych w aktualnej specyfikacji \emph{HTML5}.
 
-W proponowanym rozwiązaniu, po stronie klienta zaadoptowano dwa nowe komponenty HTML5: canvas (ang. płótno) oraz WebSocket.
+W proponowanym rozwiązaniu, po stronie klienta zaadoptowano dwa nowe komponenty \emph{HTML5}: canvas (ang. płótno) oraz WebSocket.
 
 \subsection{Element canvas}
-Nowy element drzewa DOM canvas pozwala na renderowanie dynamicznych bitmap na stronie przy pomocy skryptów języka Javascript. Aktualnie wszystkie przeglądarki producentów z WHATWG implementują obecny standard w pełni poprawnie.
- Wprowadzenie tego komponentu pozwala na tworzenie dowolnych animacji oraz grafik, których użycie wcześniej wymagało użycia zewnętrznych pluginów (np. Flash lub Java).
-W projekcie element ten używany jest do rysowania pojedynczych widgetów. 
+Nowy element drzewa \emph{DOM} \emph{canvas} pozwala na renderowanie dynamicznych bitmap na stronie przy pomocy skryptów języka \emph{JavaScript}. Aktualnie wszystkie przeglądarki producentów z \emph{WHATWG} implementują obecny standard.
+Wprowadzenie tego komponentu pozwala na tworzenie dowolnych animacji oraz grafik, których użycie wcześniej wymagało użycia zewnętrznych pluginów (np. \emph{Flash} lub \emph{Java}).
+W projekcie element ten używany jest do rysowania pojedynczych widgetów.
 
-\subsection{Technologia WebSocket}
-WebSocket jest technologią oferującą ustandaryzowaną pełną dwustronną komunikację między klientem (przeglądarką internetową) a serwerem. Podobną funkcjonalność można było wcześniej zasymulować przy pomocy modelu Comet korzystającego z długotrwałych połączeń HTTP, na które leniwie były wysyłane dane. Poprzednie rozwiązanie z powodu braku ustandaryzowania oraz wykorzystywania obejścia było trudne w utrzymaniu oraz nie oferowało synchronicznej komunikacji dwustronnej.
-W projekcie technologia wykorzystywana jest do komunikacji z serwerem. Łączność ta jest dwustronna.
+\subsection{Technologia \emph{WebSocket}}
+\emph{WebSocket} jest technologią oferującą ustandaryzowaną, pełną, dwustronną komunikację między klientem (przeglądarką internetową) a serwerem. Podobną funkcjonalność można było wcześniej zasymulować przy pomocy modelu \emph{Comet} korzystającego z długotrwałych połączeń \emph{HTTP}, na które leniwie (ang. lazy) były wysyłane dane. Poprzednie rozwiązanie z powodu braku ustandaryzowania oraz wykorzystywania obejścia było trudne w utrzymaniu oraz nie oferowało komunikacji dwustronnej.
+W projekcie technologia wykorzystywana jest do łączności z serwerem.
