--- a/thesis/theory/gtk.tex
+++ b/thesis/theory/gtk.tex
@@ -1,5 +1,5 @@
-GTK Broadway jest młodym projektem powstałym w 2011 roku stworzonym przez Alexandra Larssona. Projekt nie posiada pełnej dokumentacji, dostępne są jedynie krótkie wpisy na blogu\cite{broadway1,broadway2}.
+\emph{GTK Broadway} jest młodym projektem powstałym w 2011 roku stworzonym przez Alexandra Larssona. Projekt nie posiada pełnej dokumentacji, dostępne są jedynie krótkie wpisy na blogu\cite{broadway1,broadway2}.
 
-Broadway podobnie jak opisywana praca pozwala na uruchomienie aplikacji \emph{Gtk+} w przeglądarce. Broadway odwzorowuje każde okno aplikacji na jeden element \emph{canvas}. Zawartość okna jest aktualizowana poprzez komendy pobierane za pomocą żądania XHR (XMLHttpRequest) emulując w ten sposób HTTP pushing. Dodatkowo komendy są kompresowane przy pomocy algorytmu gzipem. Dane z wejścia przeglądarki są zbierane poprzez zdarzenia modelu DOM i wysyłane na serwer za pomocą WebSocketu. Dane o zawartości okien są przesyłane jako kopie regionów i kopie różnicowe, zaś obrazy jako data-URI zawierające obrazy PNG (zakodowane w base64). Jest to główna różnica między projektami -- w opisywanym projekcie dane przesyłane są w całkowicie inny sposób, szczegółowo opisany w kolejnych rozdziałach.
+Broadway analogicznie jak opisywana praca pozwala na uruchomienie aplikacji \emph{GTK} w przeglądarce. Broadway odwzorowuje każde okno aplikacji na jeden element \emph{canvas}. Zawartość okna jest aktualizowana poprzez komendy pobierane za pomocą żądania \emph{XHR} (XMLHttpRequest) emulując w ten sposób HTTP pushing. Dodatkowo komendy są kompresowane przy pomocy algorytmu gzipem. Dane z wejścia przeglądarki są zbierane poprzez zdarzenia modelu \emph{DOM} i wysyłane do serwera z wykorzystaniem mechanizmu \emph{WebSocketu}. Do przeglądarki przesyłane są obrazy \emph{PNG} jako \emph{data-URI} zakodowane w \emph{base64}. Zawierają one widoczne regiony, które zostały zmodyfikowane lub nie były wcześniej wyświetlone. Jest to główna różnica między projektami -- w rozwiązaniu przedstawionym w pracy dane przesyłane są w całkowicie inny sposób, szczegółowo opisany w kolejnych rozdziałach.
 
-Backend ten nie jest domyślnie włączony w żadnej dużej dystrybucji systemu Linux i jego instalacja nie jest prosta. Wymaga ręcznej kompilacji całego pakietu Gtk+ z odpowiednimi flagami. Jest to bardzo kłopotliwe, gdyż wymaga to instalacji wielu zależności.
+Backend ten nie jest domyślnie włączony w żadnej dużej dystrybucji systemu Linux i jego instalacja nie jest prosta. Wymaga ręcznej kompilacji całego pakietu \emph{GTK} z odpowiednimi flagami. Jest to bardzo kłopotliwe, gdyż wymaga to instalacji wielu zależności.
