--- a/thesis/problem_definition/communication.tex
+++ b/thesis/problem_definition/communication.tex
@@ -1,7 +1,7 @@
 \section{Komunikacja między klientem a serwerem}
 %Specyfiką problemu jest jego dwuetapowość. W pierwszym etapipe klient inicjuje połączenie jednorazowo wysyłając zapytanie zawierające informacje o aplikacji, którą klient chce uruchomić oraz identyfikatorze klienta. W drugiej kolejności wymagane jest utworzenie kanału komunikacyjnego między klientem a procesem aplikacji. 
 
-Do realizacji tego zadania stworzony został prosty serwer WWW działający w oparciu o protokół \emph{HTTP}. Jego architektura została przedstawiona na rysunku \ref{fig:arch-www}. Jako zasób domyślny udostępnia on listę dostępnych aplikacji, które klient może uruchomić. Lista ta jest w pełni konfigurowalna po stronie serwera. Inicjalizacja połączenia polega na wysłaniu przez klienta identyfikatora wybranej aplikacji. Serwer po pomyślnej weryfikacji przydziela klientowi unikatowy identyfikator sesji, uruchamia proces aplikacji i wysyła klientowi skrypt w języku JavaScript zajmujący się przetwarzaniem po stronie klienta. Każde zapytanie klienta jest weryfikowane za pomocą modułu ACL\footnote{ang. Access Control List}, który sprawdza czy konfiguracja serwera zezwala na uruchamianie żądanych aplikacji. Szczegółowy opis modułu przedstawiono w sekcji \ref{sec:server-security}.
+Do realizacji zadania komunikacji między klientem a serwerem stworzony został prosty serwer WWW działający w oparciu o protokół \emph{HTTP}. Jego architektura została przedstawiona na rysunku \ref{fig:arch-www}. Jako zasób domyślny udostępnia on listę dostępnych aplikacji, które klient może uruchomić. Inicjalizacja połączenia polega na wysłaniu przez klienta identyfikatora wybranej aplikacji. Serwer po pomyślnej weryfikacji przydziela klientowi unikatowy identyfikator sesji, uruchamia proces aplikacji i wysyła klientowi skrypt w języku \emph{JavaScript} zajmujący się przetwarzaniem po stronie przeglądarki. Każde zapytanie klienta jest weryfikowane za pomocą modułu \emph{ACL}\footnote{ang. Access Control List}, który sprawdza czy konfiguracja serwera zezwala na uruchamianie żądanych aplikacji. Szczegółowy opis modułu przedstawiono w sekcji \ref{sec:server-security}.
 
 \begin{figure}[H]
 \centering
